--- a/Sony.ISD.BAL.Web/Web.config
+++ b/Sony.ISD.BAL.Web/Web.config
@@ -11,27 +11,18 @@
 				</sectionGroup>
 			</sectionGroup>
 		</sectionGroup>
-		<sectionGroup name="system.web">
-			<section name="dataService" type="Sony.ISD.WebToolkit.Configuration.DataServiceSection, Sony.ISD.WebToolkit.Components" allowDefinition="MachineToApplication" restartOnExternalChanges="true"/>
-		</sectionGroup>
 	</configSections>
-	<connectionStrings>
-		<!--<add name="Membership" connectionString="Data Source=NLAMS0003LT626\SQL2005;Initial Catalog=BAL;Integrated Security=True"
-   providerName="System.Data.SqlClient" />-->
-		<add name="Membership" connectionString="Data Source=NLAMS0003LT626\SQL2005;Initial Catalog=BAL2;User ID=ASG;Password=sbicc" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+  <connectionStrings>
+    <add name="Membership" connectionString="Server=.;User ID=ASG;Password=sbicc;Database=StockNLoan" />
+  </connectionStrings>
 	<system.web>
-		<customErrors mode="Off"/>
 		<pages>
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-				<add tagPrefix="asp" namespace="Microsoft.Web.Preview.UI" assembly="Microsoft.Web.Preview"/>
-				<add tagPrefix="asp" namespace="Microsoft.Web.Preview.UI.Controls" assembly="Microsoft.Web.Preview"/>
-				<add tagPrefix="WebToolkit" namespace="Sony.ISD.WebToolkit.Controls" assembly="Sony.ISD.WebToolkit.Controls, Version=1.0.0.0, Culture=neutral, PublicKeyToken=44ac7868db19d3f3"/>
-				<add tagPrefix="Authentication" namespace="Sony.ISD.WebToolkit.Authentication.Controls" assembly="Sony.ISD.WebToolkit.Authentication, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6a808c3aba7bcb8e"/>
-				<add tagPrefix="BAL" namespace="Sony.ISD.BAL.Controls" assembly="Sony.ISD.BAL.Controls, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1f446a6b0d63a98e"/>
-				<add tagPrefix="ajax" namespace="AjaxControlToolkit" assembly="AjaxControlToolkit, Version=1.0.10201.0, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e"/>
-			</controls>
+        <add tagPrefix="WebToolkit" namespace="Sony.ISD.WebToolkit.Controls" assembly="Sony.ISD.WebToolkit.Controls, Version=1.0.0.0, Culture=neutral, PublicKeyToken=44ac7868db19d3f3"/>
+        <add tagPrefix="Authentication" namespace="Sony.ISD.WebToolkit.Authentication.Controls" assembly="Sony.ISD.WebToolkit.Authentication, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6a808c3aba7bcb8e"/>
+        <add tagPrefix="UTS" namespace="Sony.ISD.UTS.Controls" assembly="Sony.ISD.UTS.Controls, Version=1.0.0.0, Culture=neutral, PublicKeyToken=17227dc3daf1ceff"/>
+      </controls>
 		</pages>
 		<!--
           Set compilation debug="true" to insert debugging
@@ -42,45 +33,34 @@
 		<compilation debug="true">
 			<assemblies>
 				<add assembly="System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-				<add assembly="System.DirectoryServices, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<!--<add assembly="ADODB, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>-->
-				<add assembly="System.Design, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Web.Extensions.Design, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
-				<add assembly="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="ADODB, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/></assemblies>
-			<buildProviders>
-				<add extension="*.asbx" type="Microsoft.Web.Preview.Services.BridgeBuildProvider"/>
-			</buildProviders>
+				<add assembly="System.DirectoryServices, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/></assemblies>
 		</compilation>
-		<roleManager enabled="true" defaultProvider="CustomizedRoleProvider">
-			<providers>
-				<add name="CustomizedRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="Membership" applicationName="/TrackRecord"/>
-			</providers>
-		</roleManager>
-		<membership>
-			<providers>
-				<clear/>
-				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="Membership" enablePasswordRetrieval="false" enablePasswordReset="false" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Clear" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="1" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" applicationName="/TrackRecord"/>
-			</providers>
-		</membership>
+
+    <authentication mode="Windows"/>
+    
+    <roleManager enabled="true" defaultProvider="CustomizedRoleProvider">
+      <providers>
+        <add name="CustomizedRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="Membership" applicationName="/StockNLoan"/>
+      </providers>
+    </roleManager>
+    <membership>
+      <providers>
+        <clear/>
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="Membership" enablePasswordRetrieval="false" enablePasswordReset="false" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Clear" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="1" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" applicationName="/StockNLoan"/>
+      </providers>
+    </membership>
 		<httpHandlers>
 			<remove verb="*" path="*.asmx"/>
 			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
 			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
 			<add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false"/>
-			<add verb="GET,HEAD,POST" path="*.asbx" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false"/>
 		</httpHandlers>
 		<httpModules>
 			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-			<!--<add type="Sony.ISD.WebToolkit.Authentication.WTHttpModule, Sony.ISD.WebToolkit.Authentication" name="WTHttpModule"/>-->
+      <!--<add name="ToolkitAuthentication" type="Sony.ISD.WebToolkit.Authentication.WTHttpModule, Sony.ISD.WebToolkit.Authentication, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6a808c3aba7bcb8e"/>-->
 		</httpModules>
-		<dataService defaultProvider="SqlDataProvider">
-			<providers>
-				<add name="SqlDataProvider" type="Sony.ISD.BAL.SqlDataProvider.SqlDataProvider,Sony.ISD.BAL.SqlDataProvider" connectionStringName="Membership"/>
-			</providers>
-		</dataService>
 	</system.web>
-	<system.webServer>
+ <system.webServer>
 		<validation validateIntegratedModeConfiguration="false"/>
 		<modules>
 			<add name="ScriptModule" preCondition="integratedMode" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
@@ -90,7 +70,6 @@
 			<add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
 			<add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
 			<add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
-			<add name="ASBXHandler" verb="GET,HEAD,POST" path="*.asbx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=1.0.61025.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
 		</handlers>
 	</system.webServer>
 </configuration>
